additional height for pages if screen height is too small: prevents content from overflowing the parent (background)

--- a/app/src/pages/Auth/styles.css
+++ b/app/src/pages/Auth/styles.css
@@ -1,7 +1,7 @@
 .pages-Auth {
   background-color: var(--color-bg-secondary);
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   padding: var(--pad-0);
   display: flex;
   flex-direction: column;
@@ -14,6 +14,13 @@
     url("../../assets/images/payingGuest.jpeg");
   background-position: center bottom;
   background-size: cover;
+}
+
+/* if height is < 700px, set min-height to 700px */
+@media (max-height: 700px) {
+  .pages-Auth {
+    min-height: 700px;
+  }
 }
 
 .pages-Auth .logo {
