--- a/app/src/pages/Home/styles.css
+++ b/app/src/pages/Home/styles.css
@@ -1,7 +1,7 @@
 .pages-Home {
   background-color: var(--color-bg-secondary);
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   padding: var(--pad-0);
   display: flex;
   flex-direction: column;
@@ -14,6 +14,13 @@
     url("../../assets/images/payingGuest.jpeg");
   background-position: center bottom;
   background-size: cover;
+}
+
+/* if height is < 700px, set min-height to 700px */
+@media (max-height: 700px) {
+  .pages-Home {
+    min-height: 700px;
+  }
 }
 
 .pages-Home .select-type-container {
@@ -70,7 +77,7 @@
   position: fixed;
   top: 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: calc(100% - 2 * var(--pad-4));
   padding: var(--pad-2) var(--pad-4);
@@ -106,7 +113,9 @@
 
 .pages-Home .topbar .section-buttons-container {
   display: flex;
-  gap: var(--pad-4);
+  width: 100%;
+  max-width: 200px;
+  margin: 0 auto;
 }
 
 .pages-Home .topbar .action-buttons-container {
